{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 245,
  "lineage": "f64dc301-148b-b613-8811-0c3a339cde3c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:loadbalancer/app/trading-analytics-dev-alb/cb07c15189c15c3e",
            "arn_suffix": "app/trading-analytics-dev-alb/cb07c15189c15c3e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "trading-analytics-dev-alb-735067906.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:loadbalancer/app/trading-analytics-dev-alb/cb07c15189c15c3e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "trading-analytics-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f7b91db9f692060c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e95e4ce9b1685736"
              },
              {
                "subnet_id": "subnet-0edca9b21f076091f"
              }
            ],
            "subnets": [
              "subnet-0e95e4ce9b1685736",
              "subnet-0edca9b21f076091f"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-alb",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-alb",
              "Project": "trading-analytics"
            },
            "vpc_id": "vpc-070ab3fe976eda822",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:listener/app/trading-analytics-dev-alb/cb07c15189c15c3e/f90d4ae22f1de80b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/trading-analytics-dev-kibana/9536e75412eebd34",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:listener/app/trading-analytics-dev-alb/cb07c15189c15c3e/f90d4ae22f1de80b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:loadbalancer/app/trading-analytics-dev-alb/cb07c15189c15c3e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.elk",
            "module.alb.aws_lb_target_group.kibana",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/trading-analytics-dev-kibana/9536e75412eebd34",
            "arn_suffix": "targetgroup/trading-analytics-dev-kibana/9536e75412eebd34",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:463470963000:targetgroup/trading-analytics-dev-kibana/9536e75412eebd34",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:463470963000:loadbalancer/app/trading-analytics-dev-alb/cb07c15189c15c3e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "trading-analytics-dev-kibana",
            "port": 5601,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0f7b91db9f692060c",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7b91db9f692060c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "trading-analytics-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038fd6134a4d06e2e",
            "arn": "arn:aws:ec2:eu-west-2:463470963000:instance/i-0ec0d3982922eb809",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "trading-analytics-dev-ec2-profile",
            "id": "i-0ec0d3982922eb809",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a3038b40ccdbab0",
            "private_dns": "ip-10-0-1-93.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-3-8-174-167.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.174.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-035998a892ee05c0e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e95e4ce9b1685736",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-elk",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-elk",
              "Project": "trading-analytics"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a761b5fef135a6d"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.elk",
            "module.ec2.data.aws_ami.ubuntu",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.s3.aws_sqs_queue.s3_events",
            "module.s3.aws_sqs_queue.s3_events_dlq",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-03a761b5fef135a6d",
            "description": "Security group for ELK stack",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a761b5fef135a6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "trading-analytics-dev-elk-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-elk-sg",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-elk-sg",
              "Project": "trading-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022e0622479e591d9",
            "arn": "arn:aws:ec2:eu-west-2:463470963000:elastic-ip/eipalloc-022e0622479e591d9",
            "association_id": "eipassoc-07a20ecd95a77f006",
            "domain": "vpc",
            "id": "eipalloc-022e0622479e591d9",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-038c7649af9064e85",
            "private_dns": "ip-10-0-1-239.eu-west-2.compute.internal",
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-35-177-36-24.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.36.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-nat-eip",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-nat-eip",
              "Project": "trading-analytics"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dbe196bc2c83a90",
            "arn": "arn:aws:ec2:eu-west-2:463470963000:elastic-ip/eipalloc-00dbe196bc2c83a90",
            "association_id": "eipassoc-06d11ad2fdf2ddb63",
            "domain": "vpc",
            "id": "eipalloc-00dbe196bc2c83a90",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0109528c3ea5b0bdb",
            "private_dns": "ip-10-0-2-27.eu-west-2.compute.internal",
            "private_ip": "10.0.2.27",
            "public_dns": "ec2-18-170-235-116.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.235.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-nat-eip",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-nat-eip",
              "Project": "trading-analytics"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:internet-gateway/igw-042b4727139beb37b",
            "id": "igw-042b4727139beb37b",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-igw",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-igw",
              "Project": "trading-analytics"
            },
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022e0622479e591d9",
            "association_id": "eipassoc-07a20ecd95a77f006",
            "connectivity_type": "public",
            "id": "nat-0d7d3a1f12550f27b",
            "network_interface_id": "eni-038c7649af9064e85",
            "private_ip": "10.0.1.239",
            "public_ip": "35.177.36.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e95e4ce9b1685736",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-nat",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-nat",
              "Project": "trading-analytics"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dbe196bc2c83a90",
            "association_id": "eipassoc-06d11ad2fdf2ddb63",
            "connectivity_type": "public",
            "id": "nat-0bb8965b78b483f3c",
            "network_interface_id": "eni-0109528c3ea5b0bdb",
            "private_ip": "10.0.2.27",
            "public_ip": "18.170.235.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edca9b21f076091f",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-nat",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-nat",
              "Project": "trading-analytics"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-0fec24e95ed4a9c18",
            "id": "rtb-0fec24e95ed4a9c18",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7d3a1f12550f27b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-private-rt",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-private-rt",
              "Project": "trading-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-03392fd04ac8afeec",
            "id": "rtb-03392fd04ac8afeec",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb8965b78b483f3c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-private-rt",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-private-rt",
              "Project": "trading-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:route-table/rtb-02ce43c8d7829cc66",
            "id": "rtb-02ce43c8d7829cc66",
            "owner_id": "463470963000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042b4727139beb37b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-public-rt",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-public-rt",
              "Project": "trading-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063a97521c6902e50",
            "route_table_id": "rtb-0fec24e95ed4a9c18",
            "subnet_id": "subnet-08311013e9bfb5c14"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e35eff3ae4b9cf86",
            "route_table_id": "rtb-03392fd04ac8afeec",
            "subnet_id": "subnet-0c3c756cab5cccc91"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5f2b93f1c92251d",
            "route_table_id": "rtb-02ce43c8d7829cc66",
            "subnet_id": "subnet-0e95e4ce9b1685736"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023636074a4eed4b2",
            "route_table_id": "rtb-02ce43c8d7829cc66",
            "subnet_id": "subnet-0edca9b21f076091f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:security-group/sg-0482999c41d4ceee9",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0482999c41d4ceee9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a761b5fef135a6d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "trading-analytics-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "463470963000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-vpce-sg",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-vpce-sg",
              "Project": "trading-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.elk",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-08311013e9bfb5c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08311013e9bfb5c14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-private-1",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-private-1",
              "Project": "trading-analytics"
            },
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-0c3c756cab5cccc91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3c756cab5cccc91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-private-2",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-private-2",
              "Project": "trading-analytics"
            },
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-0e95e4ce9b1685736",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e95e4ce9b1685736",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-public-1",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-public-1",
              "Project": "trading-analytics"
            },
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:subnet/subnet-0edca9b21f076091f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edca9b21f076091f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470963000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-public-2",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-public-2",
              "Project": "trading-analytics"
            },
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc/vpc-070ab3fe976eda822",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c97d9101bcb50fdd",
            "default_route_table_id": "rtb-04683e41980fc7da0",
            "default_security_group_id": "sg-01ba4f959b60725a5",
            "dhcp_options_id": "dopt-0ff17d7f379be5815",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070ab3fe976eda822",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04683e41980fc7da0",
            "owner_id": "463470963000",
            "tags": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-vpc",
              "Project": "trading-analytics"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trading-analytics-dev-vpc",
              "Project": "trading-analytics"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc-endpoint/vpce-0415cfff00618e7c7",
            "dns_entry": [
              {
                "dns_name": "vpce-0415cfff00618e7c7-hwsy0vef.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0415cfff00618e7c7-hwsy0vef-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0415cfff00618e7c7-hwsy0vef-eu-west-2b.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0415cfff00618e7c7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-019b201e615e1d90d",
              "eni-03ea8cefbcac7b405"
            ],
            "owner_id": "463470963000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0482999c41d4ceee9"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.197",
                "subnet_id": "subnet-08311013e9bfb5c14"
              },
              {
                "ipv4": "10.0.4.42",
                "subnet_id": "subnet-0c3c756cab5cccc91"
              }
            ],
            "subnet_ids": [
              "subnet-08311013e9bfb5c14",
              "subnet-0c3c756cab5cccc91"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.ec2.aws_security_group.elk",
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc-endpoint/vpce-03cc592ad192deeca",
            "dns_entry": [
              {
                "dns_name": "vpce-03cc592ad192deeca-efk1qy7z.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-03cc592ad192deeca-efk1qy7z-eu-west-2b.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-03cc592ad192deeca-efk1qy7z-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03cc592ad192deeca",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03fb339bd495ecaf2",
              "eni-070d23ef9733cb1c8"
            ],
            "owner_id": "463470963000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0482999c41d4ceee9"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.27",
                "subnet_id": "subnet-08311013e9bfb5c14"
              },
              {
                "ipv4": "10.0.4.27",
                "subnet_id": "subnet-0c3c756cab5cccc91"
              }
            ],
            "subnet_ids": [
              "subnet-08311013e9bfb5c14",
              "subnet-0c3c756cab5cccc91"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.ec2.aws_security_group.elk",
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:463470963000:vpc-endpoint/vpce-010e6f77b57c58e88",
            "dns_entry": [
              {
                "dns_name": "vpce-010e6f77b57c58e88-u9f4lzr2.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-010e6f77b57c58e88-u9f4lzr2-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-010e6f77b57c58e88-u9f4lzr2-eu-west-2b.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-010e6f77b57c58e88",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0221eaf671203ec87",
              "eni-0f302bdba8d08d9b0"
            ],
            "owner_id": "463470963000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0482999c41d4ceee9"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.14",
                "subnet_id": "subnet-08311013e9bfb5c14"
              },
              {
                "ipv4": "10.0.4.73",
                "subnet_id": "subnet-0c3c756cab5cccc91"
              }
            ],
            "subnet_ids": [
              "subnet-08311013e9bfb5c14",
              "subnet-0c3c756cab5cccc91"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-070ab3fe976eda822"
          },
          "dependencies": [
            "module.ec2.aws_security_group.elk",
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}